--- a/login.html
+++ b/login.html
@@ -133,7 +133,7 @@
 			<br>
 			<br>
 			<br>
-			<a href="file:///C:/Users/Richard/Desktop/passwordrecovery.html">&nbsp <u>Forgot password?</u></a>   
+			<a href="passwordrecovery.html">&nbsp <u>Forgot password?</u></a>   
 			<a href="#">&nbsp&nbsp&nbsp&nbsp&nbsp <u>Create an account<u/></a><br>
 		</form>
 	<div class = "info">
