--- a/passwordrecovery.html
+++ b/passwordrecovery.html
@@ -71,7 +71,7 @@
 			<br>
 			<br>
 			<br>
-			<a href="file:///C:/Users/Richard/Desktop/login.html"><center><u>Cancel</u></center></a>
+			<a href="login.html"><center><u>Cancel</u></center></a>
 	</div>
 		
 </body>
